2011-03-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Added missing variable initialization in function
	process_page_head. 

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: added the call to
	"get_agentmodule_status" without check the alerts status for the color.
	 
	* include/functions_db.php: in function "get_agentmodule_status" added new
	parameter "$without_alerts" flag for check without alerts. 

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions.php:
	separate the function "mysql_safe_sql_string" into the two version for MySQL
	and PostgreSQL engine.

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php: fixed in the function
	"postgresql_get_db_all_rows_in_table" unclose quotes.

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/help/es/modu_group_list.php: erased the unused php file. I think
	that this file wrong uploaded.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: modified the source code for install postgreSQL DB to make
	the pandora user db as owner of tables.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	separate the function "process_sql_rollback" into the two version for
	MySQL and PostgreSQL engine.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: cleaned source code.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	separate the function "get_db_all_row_by_steps_sql", "process_sql_begin",
	"process_sql_commit" and "process_sql_rollback" into the two version for
	MySQL and PostgreSQL engine.

2011-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/skins.ajax.php: Replaced "give_acl" function call to 
	"check_acl". 